--- a/xflow-spring-boot-starter-example/pom.xml
+++ b/xflow-spring-boot-starter-example/pom.xml
@@ -51,6 +51,11 @@
       <version>1.0-SNAPSHOT</version>
     </dependency>
     <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
       <groupId>top.zephyrs</groupId>
       <artifactId>xflow-spring-boot-starter</artifactId>
       <version>1.0-SNAPSHOT</version>
